Update the local files with new party strings

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Precti si strucny popis pluginu
 Commands.NoConsole=Tento prikaz nepodporuje pouziti z konzole.
 Commands.Other=[[GREEN]]--OSTATNI PRIKAZY--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- Potvrdit pozvanku do party
 Commands.Party.Chat.Off=Chat jenom pro partu [[RED]]Vypnuty
 Commands.Party.Chat.On=Party chat [[RED]]Off
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--P\u0158\u00cdKAZY PARTY--
 Commands.Party.Invite.0=[[RED]]VAROVANI: [[GREEN]]Obdrzel jsi pozvanku do party {0} od {1}
-Commands.Party.Invite.1=[[YELLOW]]Napis [[GREEN]]/accept[[YELLOW]] pro potvrzeni pozvanky
+Commands.Party.Invite.1=[[YELLOW]]Napis [[GREEN]]/party accept[[YELLOW]] pro potvrzeni pozvanky
 Commands.Party.Invite=<player> [[RED]]- Poslat pozv\u00e1nku do party
-Commands.Party.Join=Pripojen do party: {0}
+Commands.Party.Join=[[GRAY]]Pripojen do party: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Byl jsi vyhozen z party {0}!
 Commands.Party.Leave=[[RED]]Opustil jsi party
-Commands.Party.Members=[[GREEN]]Clenove party: {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[RED]]Nejsi v zadne party.
 Commands.Party.Quit=[[RED]]- Opustil jsi svoji aktualni partu
 Commands.Party.Teleport=<hrac> [[RED]]- Teleport ke clenovi party
@@ -421,22 +427,23 @@ Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.Page=page
 Commands.Usage.PartyName=party-name
+Commands.Usage.Password=password
 Commands.Usage.Player=player
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]Momentalne nemas zadne pozvanky
 mcMMO.NoPermission=[[DARK_RED]]Nedostatecna prava
 mcMMO.NoSkillNote=[[DARK_GRAY]]Pokud nemas pristup k schopnosti, nebude zobrazena.
-Commands.Party.InParty=[[GREEN]]Party: {0}
 Party.Forbidden=[mcMMO] Party nejsou povoleny (pod\u00edvej se do Povolen\u00ed)
-Party.Help.0=[[RED]]Spr\u00e1vn\u00e9 pouzit\u00ed je /party <party-jmeno> pro pripojen\u00ed nebo /party q pro opusten\u00ed
-Party.Help.1=[[RED]] Pro pripojeni do zaheslovane party ,napis /party <jmeno party> <heslo>
-Party.Help.2=[[RED]]Napi\u0161 /party ? pro v\u00edc informac\u00ed
-Party.Help.3=[[RED]]Pou\u017eij /party <party-name> k vstoupen\u00ed, nebo /party q k vystoupen\u00ed
-Party.Help.4=[[RED]]K zamknut\u00ed nebo odemknut\u00ed skupiny napi\u0161 /party <lock/unlock>
-Party.Help.5=[[RED]]K zabezpe\u010den\u00ed skupiny heslem, napi\u0161 /party password <password>
-Party.Help.6=[[RED]]Pro vyhozeni hrace z party pouzi /party kick <player>
-Party.Help.7=[[RED]]Pro p\u0159ed\u00e1n\u00ed velen\u00ed skupiny, napi\u0161 /party owner <player>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] se p\u0159ipojil k va\u0161\u00ed skupin\u011b
 Party.InformedOnQuit={0} [[GREEN]] opustil party
 Party.InvalidName=[[DARK_RED]]Toto nen\u00ed mo\u017en\u00e9 jm\u00e9no pro partu.
@@ -451,12 +458,18 @@ Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Heslo do party nastaveno na {0}
 Party.Player.Invalid=[[RED]]Tohle neni platny hrac.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Nemuzes se teleportovat k mrtvemu hraci.
 Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]Byl jsi teleportovan k {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} se k tobe teleportoval.
 Party.Unlocked=[[GRAY]]Party je odemknuta
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=Padani
 Commands.XPGain.Archery=Zabijen\u00ed monster.
 Commands.XPGain.Axes=Utoceni na monstra
