--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -511,15 +511,15 @@ Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player =[[GREEN]]You are now the party leader.
 Party.Password.None=[[RED]]This party is password protected.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.PasswordSet=[[GREEN]]Party password set to {0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]You can't teleport to a dead player.
-Party.Teleport.Hurt=[[RED]]You''ve been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Hurt=[[RED]]You've been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
-Party.Teleport.Self=[[RED]]You can''t teleport to yourself!
+Party.Teleport.Self=[[RED]]You can't teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
 Party.Unlocked=[[GRAY]]Party is unlocked
 Party.Disband=[[GRAY]]The party has been disbanded
