--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Lea la descripci\u00f3n breve del mod
 Commands.NoConsole=Este comando no es soportado desde la consola.
 Commands.Other=[[GREEN]]--OTROS COMANDOS--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- Aceptar invitaci\u00f3n al grupo
 Commands.Party.Chat.Off=S\u00f3lo chat de grupo [[RED]]desactivado
 Commands.Party.Chat.On=S\u00f3lo chat de grupo [[RED]]activado
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMANDOS DEL GRUPO--
 Commands.Party.Invite.0=[[RED]]ATENCI\u00d3N: [[GREEN]]Fuiste invitado al grupo {0} por {1}
-Commands.Party.Invite.1=[[YELLOW]]Ingresa [[GREEN]]/accept[[YELLOW]] para aceptar la invitaci\u00f3n
+Commands.Party.Invite.1=[[YELLOW]]Ingresa [[GREEN]]/party accept[[YELLOW]] para aceptar la invitaci\u00f3n
 Commands.Party.Invite=<jugador> [[RED]]- Enviar invitaci\u00f3n al grupo
-Commands.Party.Join=Se uni\u00f3 al grupo: {0}
+Commands.Party.Join=[[GRAY]]Se uni\u00f3 al grupo: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]\u00a1Fuiste expulsado del grupo {0}!
 Commands.Party.Leave=[[RED]]Abandonaste el grupo
-Commands.Party.Members=[[GREEN]]Miembros del Grupo: {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[[RED]]No est\u00e1s en un grupo.
 Commands.Party.Quit=[[RED]]- Abandona tu grupo actual
 Commands.Party.Teleport=<jugador> [[RED]]- Teletransportarse al miembro del grupo
@@ -421,22 +427,23 @@ Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.Page=page
 Commands.Usage.PartyName=party-name
+Commands.Usage.Password=password
 Commands.Usage.Player=player
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
-Commands.Party.InParty=[[GREEN]]Grupo: {0}
 Party.Forbidden=[mcMMO] No se permiten grupos en este mundo (Ver permisos)
-Party.Help.0=[[RED]]El uso correcto es \'/party <nombre del grupo>\' para unirse o \'/party q\' para salir
-Party.Help.1=[[RED]]Para unirse a un grupo con contrase\u00f1a use /party <nombre del grupo> <contrase\u00f1a>
-Party.Help.2=[[RED]]Consulte [[YELLOW]]/party ? [[RED]]para m\u00e1s informaci\u00f3n
-Party.Help.3=[[RED]]Use \'/party <nombre del grupo>\' para unirse o \'/party q\' para salir
-Party.Help.4=[[RED]]Para bloquear o desbloquear tu grupo, usa /party <lock/unlock>
-Party.Help.5=[[RED]]Para proteger tu grupo con contrase\u00f1a, usa /party password <contrase\u00f1a>
-Party.Help.6=[[RED]]Para expulsar a un jugador de tu grupo, usa /party kick <jugador>
-Party.Help.7=[[RED]]Para transferir el grupo a otro jugador usa /party owner <jugador>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] ha entrado a tu fiesta
 Party.InformedOnQuit={0} [[GREEN]]abandon\u00f3 el grupo
 Party.InvalidName=[[DARK_RED]]Ese no es un nombre de grupo v\u00e1lido.
@@ -451,12 +458,18 @@ Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Contrase\u00f1a del grupo establecida: [[RED]]{0}
 Party.Player.Invalid=[[RED]]Ese no es un jugador v\u00e1lido.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]No te puedes teletransportar a un jugador muerto.
 Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]Te teletransportaste a {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} se teletransport\u00f3 a ti.
 Party.Unlocked=[[GRAY]]El grupo est\u00e1 desbloqueado
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=Cayendo
 Commands.XPGain.Archery=Atacando a Monstruos
 Commands.XPGain.Axes=Atacando a Monstruos
