--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- \u8bf7\u9605\u8bfb\u7b80\u8981\u63d2\u4ef6\u63cf\u8ff0
 Commands.NoConsole=\u8fd9\u4e2a\u6307\u4ee4\u4e0d\u652f\u6301\u5728\u63a7\u5236\u53f0\u4f7f\u7528.
 Commands.Other=[[GREEN]]--\u5176\u4ed6\u547d\u4ee4--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- \u63a5\u53d7\u961f\u4f0d\u9080\u8bf7
 Commands.Party.Chat.Off=\u53ea\u5141\u8bb8\u961f\u4f0d\u804a\u5929 [[RED]]\u5173\u95ed
 Commands.Party.Chat.On=\u56e2\u961f\u804a\u5929 [[GREEN]]\u5f00\u542f
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--\u7ec4\u961f\u547d\u4ee4--
 Commands.Party.Invite.0=[[RED]]\u6ce8\u610f: [[GREEN]]\u4f60\u6536\u5230\u4e86\u4e00\u4e2a\u7ec4\u961f\u9080\u8bf7 {0} \u6765\u81ea {1}
-Commands.Party.Invite.1=[[YELLOW]]\u8f93\u5165 [[GREEN]]/accept[[YELLOW]] \u6765\u63a5\u53d7\u9080\u8bf7
+Commands.Party.Invite.1=[[YELLOW]]\u8f93\u5165 [[GREEN]]/party accept[[YELLOW]] \u6765\u63a5\u53d7\u9080\u8bf7
 Commands.Party.Invite=<player> [[RED]]- \u53d1\u9001\u961f\u4f0d\u9080\u8bf7
-Commands.Party.Join=\u52a0\u5165\u961f\u4f0d: {0}
+Commands.Party.Join=[[GRAY]]\u52a0\u5165\u961f\u4f0d: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]\u4f60\u5df2\u88ab {0} \u8e22\u51fa!
 Commands.Party.Leave=[[RED]]\u4f60\u79bb\u5f00\u4e86\u8fd9\u652f\u961f\u4f0d
-Commands.Party.Members=[[GREEN]]\u961f\u4f0d\u6210\u5458: {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[[RED]]\u4f60\u4e0d\u5728\u961f\u4f0d\u4e2d.
 Commands.Party.Quit=[[RED]]- \u79bb\u5f00\u4f60\u73b0\u6709\u7684\u961f\u4f0d
 Commands.Party.Teleport=<player> [[RED]]- \u4f20\u9001\u5230\u961f\u4f0d\u6210\u5458
@@ -421,22 +427,23 @@ Commands.Usage.Level=\u7b49\u7ea7
 Commands.Usage.Message=message
 Commands.Usage.Page=\u9875
 Commands.Usage.PartyName=party-name
+Commands.Usage.Password=password
 Commands.Usage.Player=\u73a9\u5bb6
 Commands.Usage.Skill=\u6280\u80fd
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]\u4f60\u73b0\u5728\u6ca1\u6709\u6536\u5230\u4efb\u4f55\u9080\u8bf7
 mcMMO.NoPermission=[[DARK_RED]]\u6743\u9650\u4e0d\u8db3.
 mcMMO.NoSkillNote=[[DARK_GRAY]]\u5982\u679c\u4f60\u6ca1\u6709\u67d0\u4e2a\u6280\u80fd\u7684\u4f7f\u7528\u6743\u9650\u90a3\u4e48\u4ed6\u5c06\u4e0d\u4f1a\u5728\u8fd9\u91cc\u663e\u793a.
-Commands.Party.InParty=[[GREEN]]\u961f\u4f0d: {0}
 Party.Forbidden=[mcMMO] \u961f\u4f0d\u529f\u80fd\u4e0d\u5141\u8bb8\u5728\u8fd9\u4e2a\u4e16\u754c\u5f00\u542f (\u8be6\u60c5\u8bf7\u770b\u6743\u9650\u914d\u7f6e)
-Party.Help.0=[[RED]]\u4f7f\u7528 /party <party-name> \u6765\u52a0\u5165\u6216 /party q \u6765\u9000\u51fa
-Party.Help.1=[[RED]]\u5982\u60f3\u52a0\u5165\u4e00\u4e2a\u52a0\u5bc6\u7684\u961f\u4f0d, \u8bf7\u8f93\u5165 /party <party-name> <password>
-Party.Help.2=[[RED]]\u8f93\u5165 /party ? \u83b7\u5f97\u66f4\u591a\u4fe1\u606f
-Party.Help.3=[[RED]]\u4f7f\u7528 /party <party-name> \u6765\u52a0\u5165\u6216 /party q \u6765\u9000\u51fa
-Party.Help.4=[[RED]]\u5982\u60f3\u9501\u5b9a\u6216\u89e3\u9501\u4e00\u4e2a\u961f\u4f0d, \u8f93\u5165 /party <lock/unlock>
-Party.Help.5=[[RED]]\u5982\u60f3\u628a\u961f\u4f0d\u52a0\u5bc6, \u8f93\u5165 /party password <password>
-Party.Help.6=[[RED]]\u5982\u60f3\u628a\u4e00\u4e2a\u961f\u5458\u8e22\u51fa\u4f60\u7684\u961f\u4f0d, \u8f93\u5165 /party kick <player>
-Party.Help.7=[[RED]]\u5982\u60f3\u628a\u961f\u957f\u8f6c\u7ed9\u5176\u4ed6\u73a9\u5bb6, \u8f93\u5165 /party owner <player>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] \u52a0\u5165\u4e86\u961f\u4f0d
 Party.InformedOnQuit={0} [[GREEN]] \u5df2\u7ecf\u79bb\u5f00\u4e86\u8fd9\u652f\u961f\u4f0d
 Party.InvalidName=[[DARK_RED]]\u90a3\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684\u961f\u4f0d\u540d\u5b57.
@@ -451,12 +458,18 @@ Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]\u961f\u4f0d\u5bc6\u7801\u8bbe\u7f6e\u4e3a {0}
 Party.Player.Invalid=[[RED]]\u8fd9\u4e0d\u662f\u4e00\u540d\u6709\u6548\u7684\u73a9\u5bb6
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]\u4f60\u4e0d\u80fd\u4f20\u9001\u5230\u6b7b\u4ea1\u7684\u73a9\u5bb6\u8eab\u8fb9
 Party.Teleport.Hurt=[[RED]]\u4f60\u5728\u8fc7\u53bb\u7684 {0} \u79d2\u5185\u88ab\u4f24\u5bb3\u4e14\u4e0d\u80fd\u8fdb\u884c.
 Party.Teleport.Player=[[GREEN]]\u4f60\u5df2\u7ecf\u4f20\u9001\u5230 {0}.
 Party.Teleport.Self=[[RED]]\u4f60\u4e0d\u80fd\u4f20\u9001\u5230\u4f60\u81ea\u5df1\u90a3\u91cc!
 Party.Teleport.Target=[[GREEN]]{0} \u5df2\u7ecf\u4f20\u9001\u5230\u4f60\u8eab\u8fb9.
 Party.Unlocked=[[GRAY]]\u961f\u4f0d\u5df2\u89e3\u9501
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=\u6389\u843d
 Commands.XPGain.Archery=\u7a7a\u624b\u653b\u51fb\u602a\u7269
 Commands.XPGain.Axes=\u653b\u51fb\u602a\u7269
