--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Ombygning F\u00e6rdiggjort!
 Commands.ModDescription=[[RED]]- L\u00e6s den korte mod beskrivelse
 Commands.NoConsole=Denne kommando er ikke supported af konsollen.
 Commands.Other=[[GREEN]]--ANDRE KOMMANDOER--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- Accepter gruppe invitation
 Commands.Party.Chat.Off=Gruppe Chat kun [[RED]]Slukket
 Commands.Party.Chat.On=Kun Gruppe Chat [[GREEN]]Rigtigt
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--GRUPPE KOMMANDOER--
 Commands.Party.Invite.0=[[RED]]INFORMATION: [[GREEN]]Du har modtaget en gruppe invitation for {0} from {1}
-Commands.Party.Invite.1=[[YELLOW]]Skrive [[GREEN]]/accept[[YELLOW]] for at acceptere invitation
+Commands.Party.Invite.1=[[YELLOW]]Skrive [[GREEN]]/party accept[[YELLOW]] for at acceptere invitation
 Commands.Party.Invite=<player> [[RED]]- Send gruppe invitation
-Commands.Party.Join=Joinede Gruppen: {0}
+Commands.Party.Join=[[GRAY]]Joinede Gruppen: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Du er blevet fjernet fra gruppen {0}!
 Commands.Party.Leave=[[RED]]Du har forladt denne gruppe
-Commands.Party.Members=[[GREEN]]Gruppe Medlemmer: {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Du er ikke i en gruppe.
 Commands.Party.Quit=[[RED]]- Forlad din nuv\u00e6rende Gruppe
 Commands.Party.Teleport=<player> [[RED]]- Teleporter til gruppe medlem
@@ -421,22 +427,23 @@ Commands.Usage.Level=Level
 Commands.Usage.Message=besked
 Commands.Usage.Page=side
 Commands.Usage.PartyName=gruppe-navn
+Commands.Usage.Password=password
 Commands.Usage.Player=spiller
 Commands.Usage.Skill=Evne
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]] Du har ingen invitationer p\u00e5 nuv\u00e6rende tidspunkt
 mcMMO.NoPermission=[[DARK_RED]]Ikke nok Tilladelser.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Hvis du ikke har adgang til en evne, vil den evne ikke blive vist her.
-Commands.Party.InParty=[[GREEN]]Gruppe: {0}
 Party.Forbidden=[mcMMO] grupper er ikke tilladt i denne verden (Se Tilladelser)
-Party.Help.0=[[RED]]Rigtig brug er /party <party-name> for at joine, eller /party q for at forlade
-Party.Help.1=[[RED]]For at komme ind i en gruppe med kodeord, brug /party <party-name> <password>
-Party.Help.2=[[RED]]Brug /party ? for mere information
-Party.Help.3=[[RED]]Brug /party <party-name> for at komme ind i, eller /party q for at komme ud af en gruppe
-Party.Help.4=[[RED]]For at l\u00e5se elle l\u00e5se din gruppe op, brug /party <lock/unlock>
-Party.Help.5=[[RED]]For at beskytte din gruppe, brug /party password <password>
-Party.Help.6=[[RED]]For at smide en spiller ud af din gruppe, brug /party kick <player>
-Party.Help.7=[[RED]]For at overf\u00f8re ejerskabet af din gruppe, brug /party owner <player>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] er nu med i din gruppe
 Party.InformedOnQuit={0} [[GREEN]] har forladt din gruppe
 Party.InvalidName=[[DARK_RED]]Dette er ikke et gruppe navn.
@@ -451,12 +458,18 @@ Party.Owner.Player=[[GREEN]]Du er nu gruppe lederen.
 Party.Password.Incorrect=[[RED]]Gruppe kodeord er forkert.
 Party.PasswordSet=[[GREEN]]Gruppe adgangskode sat til {0}
 Party.Player.Invalid=[[RED]]Dette er ikke en rigtig spiller.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Du kan ikke teleportere til en d\u00f8d spiller.
 Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]Du har teleporteret til {0}.
 Party.Teleport.Self=[[RED]]Du kan ikke teleportere dig selv!
 Party.Teleport.Target=[[GREEN]]{0} har teleporteret til dig.
 Party.Unlocked=[[GRAY]]Gruppe er \u00e5ben
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=Falder
 Commands.XPGain.Archery=Angriber Monstre
 Commands.XPGain.Axes=Angriver Monstre
