--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Mod-Informationen Lesen.
 Commands.NoConsole=Dieser Command wird nicht per Console unterst\u00fctzt.
 Commands.Other=[[GREEN]]--ANDERE COMMANDS--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- Gruppen-Einladung akzeptieren
 Commands.Party.Chat.Off=Gruppen-Chat only [[RED]]deaktiviert
 Commands.Party.Chat.On=Gruppen-Chat only [[GREEN]]aktiviert
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--GRUPPEN COMMANDS--
 Commands.Party.Invite.0=[[RED]]INFO: [[GREEN]]Du hast eine Gruppen-Einladung f\u00fcr {0} von {1} bekommen
-Commands.Party.Invite.1=[[YELLOW]]Schreibe [[GREEN]]/accept[[YELLOW]] um die Einladung zu genehmingen
+Commands.Party.Invite.1=[[YELLOW]]Schreibe [[GREEN]]/party accept[[YELLOW]] um die Einladung zu genehmingen
 Commands.Party.Invite=<Spieler> [[RED]]- Gruppen-Einladung versenden
-Commands.Party.Join=Beigetretene Gruppe: {0}
+Commands.Party.Join=[[GRAY]]Beigetretene Gruppe: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Du wurdest von folgender Gruppe gekickt: {0}!
 Commands.Party.Leave=[[RED]]Du hast diese Gruppe verlassen
-Commands.Party.Members=[[GREEN]]Gruppen-Mitglieder: {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Du bist in keiner Gruppe.
 Commands.Party.Quit=[[RED]]- Verlasse deine derzeitige Gruppe
 Commands.Party.Teleport=<Spieler> [[RED]]- Zu Gruppen-Mitglied teleportieren
@@ -421,22 +427,23 @@ Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.Page=page
 Commands.Usage.PartyName=party-name
+Commands.Usage.Password=password
 Commands.Usage.Player=player
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]Du hast derzeit keine Einladungen
 mcMMO.NoPermission=[[DARK_RED]]Unzureichende Rechte.
 mcMMO.NoSkillNote=[[DARK_GRAY]]F\u00fcr dich nicht verf\u00fcgbare Skills werden ausgeblendet.
-Commands.Party.InParty=[[GREEN]]Gruppe: {0}
 Party.Forbidden=[mcMMO] Gruppen sind in dieser Welt nicht gestattet (Siehe Permissions)
-Party.Help.0=[[RED]]Korrekte Eingabe lautet /party <gruppen-name> zum Beitreten, /party q zum Verlassen.
-Party.Help.1=[[RED]]Um passwort-gesch\u00fctzter Gruppe beizutreten, nutze /party <gruppen-name> <password>
-Party.Help.2=[[RED]]F\u00fcr weitere Informationen nutze /party ?
-Party.Help.3=[[RED]]Nutze /party <gruppen-name> zum Beitreten, /party q zum Verlassen.
-Party.Help.4=[[RED]]Um Gruppe zu sperren/entsperren, nutze /party <lock/unlock>
-Party.Help.5=[[RED]]Um Gruppe per Passwort zu sperren, nutze /party password <password>
-Party.Help.6=[[RED]]Um Spieler aus der Gruppe zu kicken, nutze /party kick <spieler>
-Party.Help.7=[[RED]]Um die Leitung deiner Gruppe wem anders zu \u00fcbergeben, nutze /party owner <Spieler>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] ist der Gruppe beigetreten
 Party.InformedOnQuit={0} [[GREEN]] hat die Gruppe verlassen
 Party.InvalidName=[[DARK_RED]]Dies ist kein g\u00fcltiger Gruppen-Name.
@@ -451,12 +458,18 @@ Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Gruppen-Password ge\u00e4ndert zu: {0}
 Party.Player.Invalid=[[RED]]Dies ist kein g\u00fcltiger Spieler.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Du kannst dich nicht zu toten Spielern teleportieren
 Party.Teleport.Hurt=[[RED]]Du wurdest in den letzten {0} Sekunden verletzt und kannst deshalb nicht teleportieren.
 Party.Teleport.Player=[[GREEN]]Du wurdest zu {0} teleportiert.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir teleportiert.
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=Fallen
 Commands.XPGain.Archery=Monster angreifen
 Commands.XPGain.Axes=Monster angreifen
