--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Affiche une description du mod
 Commands.NoConsole=Cette commande ne peut \u00eatre utilis\u00e9e via la console.
 Commands.Other=[[GREEN]]--AUTRES COMMANDES--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- Accepte l\'invitation
 Commands.Party.Chat.Off=Canal groupe [[RED]]Off
 Commands.Party.Chat.On=Canal groupe [[GREEN]]On
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMMANDES DE GROUPE--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Vous avez re\u00e7u une invitation de {1} pour rejoindre le groupe {0}
-Commands.Party.Invite.1=[[YELLOW]]Faites [[GREEN]]/accept[[YELLOW]] pour accepter l\'invitation
+Commands.Party.Invite.1=[[YELLOW]]Faites [[GREEN]]/party accept[[YELLOW]] pour accepter l\'invitation
 Commands.Party.Invite=<nom> [[RED]]- Envoyer une invitation
-Commands.Party.Join=Rejoint le groupe : {0}
+Commands.Party.Join=[[GRAY]]Rejoint le groupe: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Vous avez \u00e9t\u00e9 \u00e9ject\u00e9 du groupe {0} !
 Commands.Party.Leave=[[RED]]Vous avez quitt\u00e9 le groupe
-Commands.Party.Members=[[GREEN]]Joueurs du groupe : {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Vous n\'\u00eates pas dans un groupe.
 Commands.Party.Quit=[[RED]]- Quitte votre groupe actuel
 Commands.Party.Teleport=<nom> [[RED]]- T\u00e9l\u00e9porte sur un membre du groupe
@@ -421,22 +427,23 @@ Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.Page=page
 Commands.Usage.PartyName=party-name
+Commands.Usage.Password=password
 Commands.Usage.Player=player
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]Vous n\'avez pas \u00e9t\u00e9 invit\u00e9
 mcMMO.NoPermission=[[DARK_RED]]Vous n\'avez pas les droits.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si vous n\'avez pas les droits pour un talent, il n\'appara\u00eetra pas ici.
-Commands.Party.InParty=[[GREEN]]Joueurs dans le groupe : {0}
 Party.Forbidden=[mcMMO] Les groupes ne sont pas permis dans ce monde (voir les permissions)
-Party.Help.0=[[RED]]L\'usage correct est /party <nom> pour rejoindre, et /party q pour quitter
-Party.Help.1=[[RED]]Pour rejoindre un groupe priv\u00e9, faites /party <nom> <motdepasse>
-Party.Help.2=[[RED]]Faites /party ? pour plus d\'informations
-Party.Help.3=[[RED]]Faites /party <nom> pour rejoindre, ou /party q pour quitter
-Party.Help.4=[[RED]]Pour verrouiller ou d\u00e9verrouiller votre groupe, faites /party <lock/unlock>
-Party.Help.5=[[RED]]Pour passer votre groupe priv\u00e9, faites /party password <motdepasse>
-Party.Help.6=[[RED]]Pour \u00e9jecter un joueur de votre groupe, faites /party kick <joueur>
-Party.Help.7=[[RED]]Pour nommer un nouveau chef de groupe, faites /party owner <nom>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] a rejoint votre groupe
 Party.InformedOnQuit={0} [[GREEN]] a quitt\u00e9 votre groupe
 Party.InvalidName=[[DARK_RED]]Ce groupe n\'existe pas.
@@ -451,12 +458,18 @@ Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Mot de passe d\u00e9fini : {0}
 Party.Player.Invalid=[[RED]]Ce joueur n\'existe pas.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Vous ne pouvez pas vous t\u00e9l\u00e9porter sur un joueur mort.
 Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]Vous vous \u00eates t\u00e9l\u00e9port\u00e9 sur {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} s\'est t\u00e9l\u00e9port\u00e9 sur vous.
 Party.Unlocked=[[GRAY]]Le groupe est d\u00e9verrouill\u00e9.
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=Chuter
 Commands.XPGain.Archery=Attaquer des monstres
 Commands.XPGain.Axes=Attaquer des monstres
