--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversione terminata!
 Commands.ModDescription=[[RED]]- Leggi una breve descrizione della mod
 Commands.NoConsole=Questo comando non supporta l\'uso da console.
 Commands.Other=[[GREEN]]--ALTRI COMANDI--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- Accetta l\'invito a unirti alla compagnia
 Commands.Party.Chat.Off=Chat di Compagnia [[GREEN]]Inattiva
 Commands.Party.Chat.On=Chat di Compagnia [[GREEN]]Attiva
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMANDI DI COMPAGNIA--
 Commands.Party.Invite.0=[[RED]]AVVISO: [[GREEN]]Hai ricevuto un invito ad unirti alla compagnia {0} da {1}
-Commands.Party.Invite.1=[[YELLOW]]Digita [[GREEN]]/accept[[YELLOW]] per accettare l\'invito
+Commands.Party.Invite.1=[[YELLOW]]Digita [[GREEN]]/party accept[[YELLOW]] per accettare l\'invito
 Commands.Party.Invite=<giocatore> [[RED]]- Manda un invito nella compagnia
-Commands.Party.Join=Ti sei unito alla Compagnia: {0}
+Commands.Party.Join=[[GRAY]]Ti sei unito alla Compagnia: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Sei stato sospeso dalla tua compagnia {0}!
 Commands.Party.Leave=[[RED]]Hai abbandonato quella compagnia
-Commands.Party.Members=[[GREEN]]Membri della Compagnia: {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Non sei nella compagnia.
 Commands.Party.Quit=[[RED]]- Abbandona la tua attuale compagnia
 Commands.Party.Teleport=<giocatore> [[RED]]- Teletrasportati verso un membro della compagnia
@@ -421,22 +427,23 @@ Commands.Usage.Level=livello
 Commands.Usage.Message=messaggio
 Commands.Usage.Page=pagina
 Commands.Usage.PartyName=nome della compagnia
+Commands.Usage.Password=password
 Commands.Usage.Player=giocatore
 Commands.Usage.Skill=abilit\u00e0
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]Non hai inviti in questo momento
 mcMMO.NoPermission=[[DARK_RED]]Permessi insufficienti.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Se non hai accesso a un\'abilit\u00e0 non sar\u00e0 mostrata qui.
-Commands.Party.InParty=[[GREEN]]Compagnia: {0}
 Party.Forbidden=[mcMMO] Le compagnie non sono permesse in questo mondo (vedi i Permessi)
-Party.Help.0=[[RED]]L\'uso corretto \u00e8 /party <nome-compagnia> per unirti ad essa o /party q per lasciarla
-Party.Help.1=[[RED]]Per unirti a una compagnia protetta da password, usa /party <nome-compagnia> <password>
-Party.Help.2=[[RED]]Usa /party ? per ulteriori informazioni
-Party.Help.3=[[RED]]Usa /party <nome-compagnia> to unirti ad essa o /party q per lasciarla
-Party.Help.4=[[RED]]Per chiudere o aprire la tua compagnia, usa /party <lock/unlock>
-Party.Help.5=[[RED]]Per proteggere la tua compagnia con una password, usa /party password <password>
-Party.Help.6=[[RED]]Per sospendere un giocatore dalla tua compagnia, usa /party kick <giocatore>
-Party.Help.7=[[RED]]Per trasferire la propriet\u00e0 della tua compagnia, usa /party owner <giocatore>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] si \u00e8 unito alla tua compagnia
 Party.InformedOnQuit={0} [[GREEN]] ha lasciato la tua compagnia
 Party.InvalidName=[[DARK_RED]]Questo non \u00e8 un nome di compagnia valido.
@@ -451,12 +458,18 @@ Party.Owner.Player=[[GREEN]]Ora sei il capo della compagnia.
 Party.Password.Incorrect=[[RED]]Password di compagnia incorretta.
 Party.PasswordSet=[[GREEN]]Password della compagnia impostata come {0}
 Party.Player.Invalid=[[RED]]Quello non \u00e8 un giocatore valido.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Non puoi teletrasportarti verso un giocatore morto.
 Party.Teleport.Hurt=[[RED]]Sei rimasto ferito negli ultimi {0} secondi e non puoi teletrasportati.
 Party.Teleport.Player=[[GREEN]]Ti sei teletrasportato da {0}.
 Party.Teleport.Self=[[RED]]Non puoi teletrasportarti verso te stesso!
 Party.Teleport.Target=[[GREEN]]{0} ti ha teletrasportato.
 Party.Unlocked=[[GRAY]]Party sbloccato.
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=Cadere
 Commands.XPGain.Archery=Attaccare Mostri
 Commands.XPGain.Axes=Attaccare Mostri
