--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -385,18 +385,24 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=Deze commando wordt niet ondersteund vanuit de console.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
+Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
 Commands.Party.Accept=[[RED]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Jij hebt een groep uitnodiging ontvangen voor {0} van {1}
-Commands.Party.Invite.1=[[YELLOW]]Tiep [[GREEN]]/accept[[YELLOW]] om de uitnodiging te accepteren
-Commands.Party.Invite=<player> [[RED]]- Send party invite
-Commands.Party.Join=Joined Party: {0}
-Commands.Party.Kick=[[RED]]Je bent gekickt uit de groep {0}!
+Commands.Party.Invite.1=[[YELLOW]]Typ [[GREEN]]/party accept[[YELLOW]] om de uitnodiging te accepteren
+Commands.Party.Invite=<player> [[RED]]- Stuur een groep uitnodiging
+Commands.Party.Join=[[GRAY]]Groep betreden: {0}
+Commands.Party.Create=[[GRAY]]Groep aangemaakt: {0}
+Commands.Party.AlreadyExists=[[DARK_RED]]Groep {0} bestaat al!
+Commands.Party.Kick=[[RED]]Je bent verwijderd uit de groep {0}!
 Commands.Party.Leave=[[RED]]Je hebt de groep verlaten
-Commands.Party.Members=[[GREEN]]Party Members: {0}
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]LEDEN[[RED]][]-----
+Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Je bent niet in een groep.
 Commands.Party.Quit=[[RED]]- Leave your current party
 Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
@@ -418,25 +424,26 @@ Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
 Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
 Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
 Commands.Usage.Level=level
-Commands.Usage.Message=message
-Commands.Usage.Page=page
-Commands.Usage.PartyName=party-name
-Commands.Usage.Player=player
+Commands.Usage.Message=bericht
+Commands.Usage.Page=pagina
+Commands.Usage.PartyName=groep-naam
+Commands.Usage.Password=wachtwoord
+Commands.Usage.Player=speler
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
-Commands.Party.InParty=[[GREEN]]Groep: {0}
 Party.Forbidden=[mcMMO] Groepen niet toegestaan op deze wereld (zie Machtigingen)
-Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
-Party.Help.1=[[RED]]To join a passworded party, use /party <party-name> <password>
-Party.Help.2=[[RED]]Consult /party ? for more information
-Party.Help.3=[[RED]]Use /party <party-name> to join or /party q to quit
-Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
-Party.Help.5=[[RED]]To password protect your party, use /party password <password>
-Party.Help.6=[[RED]]Om een speler uit je groep te kicken, gebruik /party kick <speler>
-Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] is tot je groep toegetreden
 Party.InformedOnQuit={0} [[GREEN]] heeft je groep verlaten
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
@@ -448,15 +455,21 @@ Party.NotOwner=[[DARK_RED]]You are not the party leader.
 Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
-Party.Password.Incorrect=[[RED]]Party password is incorrect.
+Party.Password.Incorrect=[[RED]]Groeps wachtwoord is incorrect.
 Party.PasswordSet=[[GREEN]]Groep wachtwoord veranderd in {0}
-Party.Player.Invalid=[[RED]]That is not a valid player.
+Party.Player.Invalid=[[RED]]Dat is geen geldige speler.
+Party.NotOnline=[[DARK_RED]]{0} is niet online!
+Party.Player.InSameParty=[[RED]]{0} zit al in je groep!
+Party.PlayerNotInParty=[[DARK_RED]]{0} zit niet in een groep.
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} is naar jou toe gedeporteerd.
 Party.Unlocked=[[GRAY]]groep is ontgrendeld
+Party.Disband=[[GRAY]]De groep was opgeheven
+Party.Status.Locked=[[DARK_RED]](OP-UITNODIGING)
+Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Monsters aanvallen
